# financial-tracker

./: .gitignore  README.md
receipt-bot/: .dockerignore  .env.example  Dockerfile  README.md  config.py  create_db.py  docker-compose.yml  main.py  pyproject.toml  storage_config.json
receipt-bot/ai/: __init__.py  groq_processor.py
receipt-bot/alembic/: env.py
receipt-bot/alembic/versions/: b6fa11c97cd5_init.py
receipt-bot/api/: main.py
receipt-bot/api/routers/: auth.py  receipts.py  web.py
receipt-bot/bot/: __init__.py  handlers.py
receipt-bot/cache/: __init__.py  receipt_cache.py
receipt-bot/data/: receipts.json
receipt-bot/database/: engine.py  models.py
receipt-bot/parser/: __init__.py  receipt_parser.py
receipt-bot/sheets/: __init__.py  sheets_client.py
receipt-bot/static/: base.css  confirm.css  history.css  preview.css  upload.css
receipt-bot/static/js/: add.js  category-dropdown.js  history.js  preview.js
receipt-bot/templates/: add.html  confirm.html  dashboard.html  edit.html  history.html  navbar.html  preview.html  upload.html
receipt-bot/tests/: test_config.py  test_groq_processor.py  test_handlers.py  test_logger.py  test_receipt_cache.py  test_receipt_parser.py  test_sheets_client.py
receipt-bot/utils/: __init__.py  logger.py
