[project]
name = "receipt-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "langchain-core>=1.2.21",
    "langchain-groq>=1.1.2",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
